--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.hotelnow2"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 218
         versionName "4.19"
@@ -89,19 +89,26 @@ android {
 repositories {
     jcenter()
     mavenCentral()
+    maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-media-compat:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
+    implementation group: project.KAKAO_SDK_GROUP, name: 'kakaolink', version: project.KAKAO_SDK_VERSION
+    implementation group: project.KAKAO_SDK_GROUP, name: 'kakaotalk', version: project.KAKAO_SDK_VERSION
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-media-compat:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'gun0912.ted:tedpermission:2.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.0'
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    implementation 'com.facebook.android:facebook-android-sdk:4.36.0'
+    implementation 'com.tune:tune-marketing-console-sdk:4.15.0'
+    implementation 'com.android.support:multidex:1.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
