--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     buildToolsVersion '27.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-        applicationId "com.hotelnow2"
+        applicationId "com.hotelnow"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 218
@@ -84,6 +84,10 @@ android {
     dexOptions {
         javaMaxHeapSize "2048M"
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 repositories {
@@ -101,6 +105,11 @@ dependencies {
     implementation 'com.android.support:support-media-compat:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+
     implementation 'gun0912.ted:tedpermission:2.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.0'
@@ -109,6 +118,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.36.0'
     implementation 'com.tune:tune-marketing-console-sdk:4.15.0'
     implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+    implementation 'com.github.vivchar:RendererRecyclerViewAdapter:2.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
