--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hotelnow2">
+    package="com.hotelnow">
 
     <application
-        android:name=".utils.HotelnowApplication"
+        android:name="com.hotelnow.utils.HotelnowApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ActLoading">
+        <activity android:name="com.hotelnow.activity.ActLoading">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.hotelnow.activity.MainActivity"
+            android:theme="@style/AppTheme.TransNav"/>
+
         <service
-            android:name=".utils.MyFirebaseMessagingService">
+            android:name="com.hotelnow.utils.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
 
         <service
-            android:name=".utils.MyFirebaseInstanceIDService">
+            android:name="com.hotelnow.utils.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="@string/facebook_provider"
+            android:exported="true" />
+<!--일단 주석-->
+        <!--<meta-data-->
+            <!--android:name="com.facebook.sdk.ApplicationId"-->
+            <!--android:value="@string/facebook_app_id" />-->
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="4d8f460a1c1f7084095dfac28289e89e" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_map_key" />
     </application>
 
 </manifest>
