--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,9 @@
             android:name="com.facebook.FacebookContentProvider"
             android:authorities="@string/facebook_provider"
             android:exported="true" />
-<!--일단 주석-->
-        <!--<meta-data-->
-            <!--android:name="com.facebook.sdk.ApplicationId"-->
-            <!--android:value="@string/facebook_app_id" />-->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="4d8f460a1c1f7084095dfac28289e89e" />
