main 껍데기 완료 detail 시작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name="com.hotelnow.activity.MainActivity"
             android:theme="@style/AppTheme.TransNav"/>
         <activity android:name=".activity.CalendarActivity" />
+        <activity android:name=".activity.DetailHotelActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
