--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:theme="@style/AppTheme.TransNav"/>
         <activity android:name=".activity.CalendarActivity" />
         <activity android:name=".activity.DetailHotelActivity" />
+        <activity android:name=".activity.SearchActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
