지역선택 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".activity.CalendarActivity" />
         <activity android:name=".activity.DetailHotelActivity" />
         <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.AreaHotelActivity" />
+        <activity android:name=".activity.MapHotelActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
