검색 수정 map 동작완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         local {
             // 빌드시 local ip 를 가져오는 로직 문제가 있어서 일단, 주석처리
             //def localhost = Inet4Address.getLocalHost().getHostAddress();
-//            def localhost = '192.168.219.140';
+//            def localhost = '192.168.219.164';
             def localhost = '192.168.4.119';
             resValue("string", "app_name", "호텔나우-local");
             resValue("string", "google_map_key", "AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc");
@@ -99,6 +99,7 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':calendar_lib')
+    implementation project(':map_lib')
     implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
     implementation group: project.KAKAO_SDK_GROUP, name: 'kakaolink', version: project.KAKAO_SDK_VERSION
     implementation group: project.KAKAO_SDK_GROUP, name: 'kakaotalk', version: project.KAKAO_SDK_VERSION
@@ -118,6 +119,8 @@ dependencies {
     implementation 'com.tune:tune-marketing-console-sdk:4.15.0'
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
