--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
             //def localhost = Inet4Address.getLocalHost().getHostAddress();
 //            def localhost = '192.168.219.163';
             def localhost = '192.168.4.119';
+//            def localhost = '192.168.4.159';
             resValue("string", "app_name", "호텔나우-local");
             resValue("string", "google_map_key", "AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc");
             resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider640301742734227");
