--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
         <activity android:name=".activity.FilterActivityActivity" />
         <activity android:name=".activity.AreaActivityActivity" />
         <activity android:name=".activity.MapAcvitityActivity" />
-        <activity android:name=".activity.ReservationActivity" />
+        <activity android:name=".activity.ReservationActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
         <activity android:name=".activity.PaymentActivity" />
         <activity android:name=".activity.MapActivity" />
         <activity android:name=".activity.WebviewActivity" />
