--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".activity.MyCardActivity" />
         <activity android:name=".activity.CardAddActivity" />
         <activity android:name=".activity.EventActivity" />
+        <activity android:name=".activity.PrivateDealActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
