--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.hotelnow"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 218
-        versionName "4.19"
+        versionCode 221
+        versionName "4.22"
         multiDexEnabled true
     }
     buildTypes {
@@ -127,6 +127,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.github.armcha:AutoLinkTextView:0.3.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4.4'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
