--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,7 @@ dependencies {
     implementation 'com.github.armcha:AutoLinkTextView:0.3.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4.4'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.wang.avi:library:1.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
