--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity android:name=".activity.ReviewActivityWriteActivity" />
         <activity android:name=".activity.ReviewShowActivity" />
         <activity android:name=".activity.ThemeSpecialHotelActivity" />
+        <activity android:name=".activity.ThemeSpecialActivityActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
