--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,14 @@ android {
             resValue("string", "google_map_key", "AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc");
             resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider640301742734227");
 
-            buildConfigField("String", "domain", "\"http://dev.api.hotelnow.co.kr\"")
-            buildConfigField("String", "domainssl", "\"http://dev.api.hotelnow.co.kr\"")
-            buildConfigField("String", "arsDomain", "\"http://13.114.248.114:8008\"")
-            buildConfigField("String", "billDomain", "\"http://13.114.248.114:8808\"")
-            buildConfigField("String", "phonePayDomain", "\"http://13.114.248.114:8088\"")
-            buildConfigField("String", "cardDomain", "\"http://13.114.248.114:7777\"")
+            buildConfigField("String", "domain", "\"https://dev.api.hotelnow.co.kr\"")
+            buildConfigField("String", "domainssl", "\"https://dev.api.hotelnow.co.kr\"")
+            buildConfigField("String", "arsDomain", "\"https://13.114.248.114:8008\"")
+            buildConfigField("String", "billDomain", "\"https://13.114.248.114:8808\"")
+            buildConfigField("String", "phonePayDomain", "\"https://13.114.248.114:8088\"")
+            buildConfigField("String", "cardDomain", "\"https://13.114.248.114:7777\"")
             buildConfigField("String", "googleProjectid", "\"369003584286\"")
-            buildConfigField("String", "kcpCardDomain", "\"http://13.114.248.114:8009/order_app.php\"")
+            buildConfigField("String", "kcpCardDomain", "\"https://13.114.248.114:8009/order_app.php\"")
             buildConfigField("String", "webUrl", "\"http://dev.www.hotelnow.co.kr/ko\"")
             buildConfigField("String", "google_map_key2", "\"AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc\"")
         }
@@ -73,14 +73,14 @@ android {
             resValue("string", "google_map_key", "AIzaSyDtgyy2TXgeIH3CrPh_C-R2Cv2aLteK_ME");
             resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider752568681483147");
 
-            buildConfigField("String", "domain", "\"http://elb.api.hotelnow.co.kr\"")
+            buildConfigField("String", "domain", "\"https://elb.api.hotelnow.co.kr\"")
             buildConfigField("String", "domainssl", "\"https://elb.api.hotelnow.co.kr\"")
-            buildConfigField("String", "arsDomain", "\"http://54.178.161.178:8008\"")
-            buildConfigField("String", "billDomain", "\"http://54.178.161.178:8808\"")
-            buildConfigField("String", "phonePayDomain", "\"http://54.178.161.178:8088\"")
-            buildConfigField("String", "cardDomain", "\"http://54.178.161.178:7777\"")
+            buildConfigField("String", "arsDomain", "\"https://54.178.161.178:8008\"")
+            buildConfigField("String", "billDomain", "\"https://54.178.161.178:8808\"")
+            buildConfigField("String", "phonePayDomain", "\"https://54.178.161.178:8088\"")
+            buildConfigField("String", "cardDomain", "\"https://54.178.161.178:7777\"")
             buildConfigField("String", "googleProjectid", "\"369003584286\"")
-            buildConfigField("String", "kcpCardDomain", "\"http://54.178.161.178:8009/order_app.php\"")
+            buildConfigField("String", "kcpCardDomain", "\"https://54.178.161.178:8009/order_app.php\"")
             buildConfigField("String", "webUrl", "\"http://www.hotelnow.co.kr/ko\"")
             buildConfigField("String", "google_map_key2", "\"AIzaSyDtgyy2TXgeIH3CrPh_C-R2Cv2aLteK_ME\"")
         }
