--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".activity.ReviewShowActivity" />
         <activity android:name=".activity.ThemeSpecialHotelActivity" />
         <activity android:name=".activity.ThemeSpecialActivityActivity" />
+        <activity android:name=".activity.ActivityFilterActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
