--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,8 @@
         <activity android:name=".activity.ThemeSpecialHotelActivity" />
         <activity android:name=".activity.ThemeSpecialActivityActivity" />
         <activity android:name=".activity.ActivityFilterActivity" />
+        <activity android:name=".activity.ActivitySearchActivity" />
+        <activity android:name=".activity.HotelSearchActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
