최근 본 상품 더 보기 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.StayMapActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RecentAllActivity" />
 
         <service
             android:name="com.hotelnow.utils.MyFirebaseMessagingService">
