--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".activity.DetailHotelActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.SearchActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.AreaHotelActivity"
             android:screenOrientation="portrait"/>
