--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:hardwareAccelerated="true"
-        android:usesCleartextTraffic="false"
+        android:usesCleartextTraffic="true"
         android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
         android:theme="@style/AppTheme">
         <activity android:name="com.hotelnow.activity.ActLoading"
