--- a/map_lib/build.gradle
+++ b/map_lib/build.gradle
@@ -27,6 +27,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.google.android.gms:play-services-maps:10.2.1'
     testImplementation 'junit:junit:4.12'
 
