--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
         <activity android:name=".activity.SignupActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.MyCouponActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.MyCardActivity"
             android:screenOrientation="portrait"/>
