--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,9 @@ android {
             buildConfigField("String", "domain", "\"https://dev.api.hotelnow.co.kr\"")
             buildConfigField("String", "domain2", "\"http://dev.api.hotelnow.co.kr\"")
             buildConfigField("String", "domainssl", "\"https://dev.api.hotelnow.co.kr\"")
-            buildConfigField("String", "arsDomain", "\"http://13.114.248.114:8008\"")
-            buildConfigField("String", "billDomain", "\"http://13.114.248.114:8808\"")
-            buildConfigField("String", "phonePayDomain", "\"http://13.114.248.114:8088\"")
+            buildConfigField("String", "arsDomain", "\"https://payment-ars.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "billDomain", "\"https://payment.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "phonePayDomain", "\"https://payment-phone.dev.hotelnow.co.kr\"")
             buildConfigField("String", "cardDomain", "\"http://13.114.248.114:7777\"")
             buildConfigField("String", "googleProjectid", "\"369003584286\"")
             buildConfigField("String", "kcpCardDomain", "\"https://payment.dev.hotelnow.co.kr/order_app.php\"")
