--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,7 +133,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.github.armcha:AutoLinkTextView:0.3.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.wang.avi:library:1.0.1'
     testImplementation 'junit:junit:4.12'
