레저 예약화면에서 키패드 안뜨게 수정, 루팅 단말 su 제외한 모든 글씨 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,8 @@
         <activity android:name=".activity.FullImageViewActivityActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.ReservationActivityActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
         <activity android:name=".activity.ReservationHotelDetailActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.ActivityMapActivity"
